--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
     "@vueup/vue-quill": "^1.2.0",
+    "dompurify": "^3.3.1",
     "pinia": "^3.0.4",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
